[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/bgfruitninja.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/inputProc.gd" type="Script" id=3]
[ext_resource path="res://sounds/Cut.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Ninja Roxo.png" type="Texture" id=5]
[ext_resource path="res://assets/soupofjustice.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/bomb100.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )
centered = false

[node name="Fruits" type="Node2D" parent="."]

[node name="Generator" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="InputProc" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="Inter" type="Timer" parent="InputProc"]
wait_time = 0.1

[node name="Limit" type="Timer" parent="InputProc"]
wait_time = 1.5

[node name="cut" type="AudioStreamPlayer2D" parent="InputProc"]
stream = ExtResource( 4 )
volume_db = 6.433

[node name="SoundTime" type="Timer" parent="InputProc"]
wait_time = 0.5

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 327.0
margin_bottom = 267.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Score" type="Label" parent="Control"]
margin_left = 247.983
margin_top = 22.2074
margin_right = 326.983
margin_bottom = 173.207
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.537255, 0.458824, 0.729412, 1 )
text = "0"

[node name="Bomb1" type="TextureRect" parent="Control"]
margin_left = 1160.34
margin_top = 18.5062
margin_right = 1260.34
margin_bottom = 118.506
texture = ExtResource( 7 )

[node name="Bomb2" type="TextureRect" parent="Control"]
margin_left = 1061.34
margin_top = 18.5062
margin_right = 1161.34
margin_bottom = 118.506
texture = ExtResource( 7 )

[node name="Bomb3" type="TextureRect" parent="Control"]
margin_left = 958.338
margin_top = 18.5062
margin_right = 1058.34
margin_bottom = 118.506
texture = ExtResource( 7 )

[connection signal="timeout" from="Generator" to="." method="_on_Generator_timeout"]
[connection signal="timeout" from="InputProc/Inter" to="InputProc" method="_on_Inter_timeout"]
[connection signal="timeout" from="InputProc/Limit" to="InputProc" method="_on_Limit_timeout"]
[connection signal="timeout" from="InputProc/SoundTime" to="InputProc" method="_on_SoundTime_timeout"]
